--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ Tags: one-page, single-page, portfolio, custom-colors, post-formats, responsive,
 /*=== MEDIA QUERY ===*/
 @import url("https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,600");
+
 html {
   background-color: #353b43;
   color: #737f8a;
@@ -21,7 +22,12 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 400;
   font-family: "Quattrocento Sans", sans-serif;
   color: #afbac4;
@@ -45,7 +51,8 @@ p {
   background: #57cbcc;
 }
 
-ol, ul {
+ol,
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -64,12 +71,15 @@ iframe {
   border: 0;
 }
 
-a, a:focus, a:hover {
+a,
+a:focus,
+a:hover {
   text-decoration: none;
   outline: 0;
 }
 
-a:focus, a:hover {
+a:focus,
+a:hover {
   color: #6CB670;
 }
 
@@ -79,6 +89,10 @@ a:focus, a:hover {
 
 .padding-0 {
   padding: 0 !important;
+}
+
+.mb-50{
+  margin-bottom: 50px;
 }
 
 .btn {
@@ -97,7 +111,8 @@ a:focus, a:hover {
   border: 1px solid #4e595f;
 }
 
-.btn-transparent:hover, .btn-transparent:focus {
+.btn-transparent:hover,
+.btn-transparent:focus {
   background-color: #57cbcc;
   border: 1px solid transparent;
   color: #fff;
@@ -184,7 +199,7 @@ a:focus, a:hover {
   padding: 0 0 50px;
 }
 
-.sub-title > h3 {
+.sub-title>h3 {
   border-left: 3px solid #ddd;
   border-right: 3px solid #ddd;
   display: inline-block;
@@ -192,7 +207,9 @@ a:focus, a:hover {
   text-transform: uppercase;
 }
 
-.btn.active:focus, .btn:active:focus, .btn:focus {
+.btn.active:focus,
+.btn:active:focus,
+.btn:focus {
   outline: 0;
 }
 
@@ -219,7 +236,8 @@ a:focus, a:hover {
   display: inline-block;
 }
 
-ol, ul {
+ol,
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -227,10 +245,6 @@ ol, ul {
 
 figure {
   margin: 0;
-}
-
-.mb-50{
-  margin-bottom: 50px;
 }
 
 a {
@@ -241,12 +255,15 @@ iframe {
   border: 0;
 }
 
-a, a:focus, a:hover {
+a,
+a:focus,
+a:hover {
   text-decoration: none;
   outline: 0;
 }
 
-a:focus, a:hover {
+a:focus,
+a:hover {
   color: #57cbcc;
 }
 
@@ -301,7 +318,9 @@ a:focus, a:hover {
   position: relative;
 }
 
-.btn.active:focus, .btn:active:focus, .btn:focus {
+.btn.active:focus,
+.btn:active:focus,
+.btn:focus {
   outline: 0;
 }
 
@@ -313,25 +332,16 @@ a:focus, a:hover {
 }
 
 #preloader {
-  background: #fff;
-  height: 100%;
-  left: 0;
-  opacity: 1;
-  filter: alpha(opacity=100);
   position: fixed;
-  text-align: center;
   top: 0;
-  width: 100%;
-  z-index: 999999999;
-}
-
-.preloader {
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
-  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sk-cube-grid {
@@ -395,10 +405,14 @@ a:focus, a:hover {
 }
 
 @-webkit-keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
+
+  0%,
+  70%,
+  100% {
     -webkit-transform: scale3D(1, 1, 1);
     transform: scale3D(1, 1, 1);
   }
+
   35% {
     -webkit-transform: scale3D(0, 0, 1);
     transform: scale3D(0, 0, 1);
@@ -406,10 +420,14 @@ a:focus, a:hover {
 }
 
 @keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
+
+  0%,
+  70%,
+  100% {
     -webkit-transform: scale3D(1, 1, 1);
     transform: scale3D(1, 1, 1);
   }
+
   35% {
     -webkit-transform: scale3D(0, 0, 1);
     transform: scale3D(0, 0, 1);
@@ -465,7 +483,8 @@ a:focus, a:hover {
   background: transparent;
 }
 
-.header-bradcrumb a, .header-bradcrumb .active {
+.header-bradcrumb a,
+.header-bradcrumb .active {
   color: #cfcfcf;
   font-weight: 200;
   font-family: "Quattrocento Sans", sans-serif;
@@ -547,7 +566,8 @@ a:focus, a:hover {
   color: #737f8a;
 }
 
-.navigation .navigation-menu li a:hover, .navigation .navigation-menu li a:focus {
+.navigation .navigation-menu li a:hover,
+.navigation .navigation-menu li a:focus {
   background: transparent;
   color: #57cbcc;
 }
@@ -698,7 +718,7 @@ a:focus, a:hover {
 
 .about .block:hover .icon-box {
   -webkit-transform: translateY(-10px);
-          transform: translateY(-10px);
+  transform: translateY(-10px);
 }
 
 .about .block .icon-box {
@@ -712,14 +732,15 @@ a:focus, a:hover {
   border-right: 2px solid rgba(236, 239, 241, 0.07);
   font-size: 50px;
   -webkit-transform: translateZ(0px);
-          transform: translateZ(0px);
+  transform: translateZ(0px);
   transition-duration: 0.3s;
   transition-property: -webkit-transform;
   transition-property: transform;
   transition-property: transform, -webkit-transform;
 }
 
-.about .block .icon-box:after, .about .block .icon-box:before {
+.about .block .icon-box:after,
+.about .block .icon-box:before {
   content: "";
   position: absolute;
   z-index: 1;
@@ -728,7 +749,7 @@ a:focus, a:hover {
   background-color: inherit;
   left: 20.4315px;
   -webkit-transform: scaleY(0.5774) rotate(-45deg);
-          transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
 }
 
 .about .block .icon-box:before {
@@ -1037,7 +1058,7 @@ a:focus, a:hover {
   left: 50%;
   opacity: 0;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   z-index: 9;
   transition: all 0.2s ease-in-out;
   text-align: center;
@@ -1154,7 +1175,7 @@ a:focus, a:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: rotateY(0deg) scale(1, 1);
-          transform: rotateY(0deg) scale(1, 1);
+  transform: rotateY(0deg) scale(1, 1);
 }
 
 .member-photo {
@@ -1170,7 +1191,7 @@ a:focus, a:hover {
 
 .member-photo:hover img {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .member-photo img {
@@ -1195,7 +1216,7 @@ a:focus, a:hover {
   filter: alpha(opacity=0);
   transition: all .5s ease-out 0s;
   -webkit-transform: rotateY(180deg) scale(0.5, 0.5);
-          transform: rotateY(180deg) scale(0.5, 0.5);
+  transform: rotateY(180deg) scale(0.5, 0.5);
 }
 
 .member-photo .mask ul {
@@ -1395,7 +1416,7 @@ a:focus, a:hover {
   color: #57cbcc;
 }
 
-.post-meta > span {
+.post-meta>span {
   color: #666;
   border-right: 1px solid #dedede;
   display: inline-block;
@@ -1404,11 +1425,11 @@ a:focus, a:hover {
   padding-right: 10px;
 }
 
-.post-meta > span:last-child {
+.post-meta>span:last-child {
   border-right: 0;
 }
 
-.post-meta > span i {
+.post-meta>span i {
   margin-right: 5px;
 }
 
@@ -1491,7 +1512,7 @@ a:focus, a:hover {
   margin-right: 20px;
 }
 
-.post-author > img {
+.post-author>img {
   border: 1px solid #dedede;
   max-width: 120px;
   padding: 5px;
@@ -1541,18 +1562,21 @@ a:focus, a:hover {
   margin-top: 80px;
 }
 
-.comment-reply-form input, .comment-reply-form textarea {
+.comment-reply-form input,
+.comment-reply-form textarea {
   height: 35px;
   border-radius: 0;
   box-shadow: none;
 }
 
-.comment-reply-form input:focus, .comment-reply-form textarea:focus {
+.comment-reply-form input:focus,
+.comment-reply-form textarea:focus {
   box-shadow: none;
   border: 1px solid #57cbcc;
 }
 
-.comment-reply-form textarea, .comment-reply-form .btn-main {
+.comment-reply-form textarea,
+.comment-reply-form .btn-main {
   height: auto;
 }
 
@@ -1574,7 +1598,7 @@ a:focus, a:hover {
 .social-icon ul li:hover a {
   background-color: #57cbcc;
   -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 
 .social-icon ul li:hover a i {
@@ -1582,7 +1606,7 @@ a:focus, a:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 
 .social-icon ul li a {
@@ -1592,7 +1616,7 @@ a:focus, a:hover {
   height: 70px;
   width: 70px;
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
   transition: all 400ms ease-out 0s;
 }
 
@@ -1612,7 +1636,7 @@ a:focus, a:hover {
   opacity: 0.3;
   filter: alpha(opacity=30);
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
   transition: all 400ms ease-out 0s;
 }
 
@@ -1763,7 +1787,7 @@ a:focus, a:hover {
   padding: 0 20px 10px;
 }
 
-.post-meta > span {
+.post-meta>span {
   border-right: 1px solid #4e595f;
   display: inline-block;
   font-size: 12px;
@@ -1771,11 +1795,11 @@ a:focus, a:hover {
   padding-right: 10px;
 }
 
-.post-meta > span:last-child {
+.post-meta>span:last-child {
   border-right: 0;
 }
 
-.post-meta > span > i {
+.post-meta>span>i {
   margin-right: 5px;
 }
 
@@ -1802,7 +1826,7 @@ aside.widget {
   margin-bottom: 25px;
 }
 
-.widget-title > h3 {
+.widget-title>h3 {
   color: #fff;
   margin-bottom: 15px;
   margin-top: 0;
@@ -1851,7 +1875,7 @@ aside.widget {
   margin-bottom: 25px;
 }
 
-.tab-excerpt > span {
+.tab-excerpt>span {
   display: block;
   font-size: 12px;
   margin-bottom: 10px;
@@ -1878,12 +1902,12 @@ aside.widget {
   transition: all .5s ease-in 0s;
 }
 
-.categories > li:hover a {
+.categories>li:hover a {
   padding-left: 10px;
   color: #6CB670;
 }
 
-.categories > li:last-child {
+.categories>li:last-child {
   border-bottom: 0;
 }
 
@@ -1984,16 +2008,16 @@ blockquote {
   margin-right: 20px;
 }
 
-.post-author > img {
+.post-author>img {
   border: 1px solid #4e595f;
   max-width: 120px;
   padding: 5px;
   width: 100%;
 }
 
-.comment-reply-form > h3,
-.author-about > h4,
-.comments > h4 {
+.comment-reply-form>h3,
+.author-about>h4,
+.comments>h4 {
   border-bottom: 1px solid #4e595f;
   margin-bottom: 15px;
   margin-top: 0;
@@ -2035,7 +2059,8 @@ blockquote {
   overflow: hidden;
 }
 
-.author-comment cite a:hover, .replay:hover {
+.author-comment cite a:hover,
+.replay:hover {
   color: #6CB670;
   text-decoration: underline;
 }
