make the author and description configurable

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
     <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Meghna One page parallax responsive HTML Template ">
-        <meta name="author" content="Themefisher">
-		
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}">
+        <meta name="author" content="{{ $.Site.Params.author }}">
+	
 		{{ "<!-- Mobile Specific Meta -->" | safeHTML }}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {{ .Hugo.Generator }}
