Adds the possibility to turn maps on and off in the contact page

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -63,11 +63,13 @@
         </div>
     </div>
 
+    {{ if .Site.Data.contact.enable_maps }}
     {{"<!-- Google Map -->" | safeHTML}}
     <div class="google-map">
         <div id="map-canvas" {{ with .Site.Data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }} 
         {{ with .Site.Data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
     </div>
+    {{ end }}
 
 </section>
 {{"<!-- /contact -->" | safeHTML}}
