Fixes a mistake in the team.html where the url was hardcoded to #

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -23,7 +23,7 @@
                         <div class="mask">
                             <ul class="list-inline">
                                 {{ range .socialIcon }}
-                                <li><a href="#"><i class="{{ .icon }}"></i></a></li>
+                                <li><a href="{{ .url }}"><i class="{{ .icon }}"></i></a></li>
                                 {{ end }}
                             </ul>
                         </div>
