added metadata, google analytics, minified css|js

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
     <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Meghna One page parallax responsive HTML Template ">
-        <meta name="author" content="Themefisher">
+        <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
+        {{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 		
 		{{ "<!-- Mobile Specific Meta -->" | safeHTML }}
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,8 @@
         <link rel="stylesheet" href="{{"plugins/slick-carousel/slick/slick.css"|absURL}}">
         <link rel="stylesheet" href="{{"plugins/slick-carousel/slick/slick-theme.css"|absURL}}">
 		{{"<!-- Main Stylesheet -->"|safeHTML}}
-        <link rel="stylesheet" href="{{"css/style.css"|absURL}}">
+        {{ $styles := resources.Get "css/style.css" | minify}}
+        <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 
     </head>
     {{"<!-- body start -->" | safeHTML}}
