--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -53,7 +53,17 @@
 		{{"<!-- wow.min Script -->" | safeHTML}}
 		<script type="text/javascript" src="{{ "plugins/wow/dist/wow.min.js" | absURL}}"></script>
 		{{"<!-- Custom js -->" | safeHTML}}
-		<script type="text/javascript" src="{{ "js/script.js" | absURL}}"></script>
+		{{ $script := resources.Get "js/script.js" | minify}}
+		<script src="{{ $script.Permalink }}"></script>
+		{{ "<!-- google analitycs -->" | safeHTML }}
+		<script>
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+				ga('create', '{{ .Site.Params.googleAnalitycsID }}', 'auto');
+				ga('send', 'pageview');
+		</script>
 		
     </body>
 </html>
