modified navigation responsive issue

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,3 @@
-{{ define "main" }}
-
 {{ partial "header.html" . }}
 
 {{ partial "navigation.html" . }}
@@ -33,4 +31,4 @@
 </section>
 {{"<!-- /blog -->" | safeHTML}}
 
-{{ end }}
+{{ partial "footer.html" . }}
