--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -6,7 +6,7 @@
 
             {{"<!-- section title -->" | safeHTML}}
             <div class="title text-center wow fadeInDown">
-                <h2> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} <span class="color"> {{ with .Site.Data.blog.headingSpan }} {{ . }} {{ end }} </span></h2>
+                <h2> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} <span class="color"> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} </span></h2>
                 <div class="border"></div>
             </div>
             {{"<!-- /section title -->" | safeHTML}}
