--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,3 @@
-{{ define "main" }}
-
 {{ partial "header.html" . }}
 
 {{ partial "navigation.html" . }}
@@ -24,4 +22,4 @@
     </div>
 </section>
 
-{{ end }}
+{{ partial "footer.html" . }}
