--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,33 +1,31 @@
-{{ define "main" }}
+{{ partial "header.html" . }}
+	
+{{ partial "preloader.html" . }}
+	    
+{{ partial "hero-area.html" . }}
 
-    {{ partial "header.html" . }}
-        
-    {{ partial "preloader.html" . }}
-            
-    {{ partial "hero-area.html" . }}
+{{ partial "navigation.html" . }}
 
-    {{ partial "navigation.html" . }}
+{{ partial "about.html" . }}
 
-    {{ partial "about.html" . }}
+{{ partial "cta.html" . }}
 
-    {{ partial "cta.html" . }}
+{{ partial "service.html" . }}
+	
+{{ partial "skill.html" . }}
 
-    {{ partial "service.html" . }}
-        
-    {{ partial "skill.html" . }}
+{{ partial "portfolio.html" . }}
 
-    {{ partial "portfolio.html" . }}
+{{ partial "counter.html" . }}
 
-    {{ partial "counter.html" . }}
+{{ partial "team.html" . }}
+		
+{{ partial "pricing.html" . }}
 
-    {{ partial "team.html" . }}
-            
-    {{ partial "pricing.html" . }}
+{{ partial "testimonial.html" . }}
 
-    {{ partial "testimonial.html" . }}
+{{ partial "blog.html" . }}
+		
+{{ partial "contact.html" . }}
 
-    {{ partial "blog.html" . }}
-            
-    {{ partial "contact.html" . }}
-
-{{ end }}
+{{ partial "footer.html" . }}
