--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -3,35 +3,34 @@
 <section id="blog" class="section">
     <div class="container">
         <div class="row">
-
-            {{"<!-- section title -->" | safeHTML}}
-            <div class="title text-center wow fadeInDown">
-                <h2> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} <span class="color"> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} </span></h2>
-                <div class="border"></div>
+            <div class="col-lg-12">
+                {{"<!-- section title -->" | safeHTML}}
+                <div class="title text-center wow fadeInDown">
+                    <h2> {{ with .Site.Data.blog.heading }} {{ . }} {{ end }} <span class="color"> {{ with .Site.Data.blog.headingSpan }} {{ . }} {{ end }} </span></h2>
+                    <div class="border-meghna"></div>
+                </div>
             </div>
             {{"<!-- /section title -->" | safeHTML}}
 
-            <div class="clearfix">
-                {{ range .Data.Pages }}
-                {{"<!-- single blog post -->" | safeHTML}}
-                <article class="col-md-4 col-sm-6 col-xs-12 clearfix wow fadeInUp" data-wow-duration="500ms">
-                    <div class="post-block">
-                        <div class="media-wrapper">
-                            {{ with .Params.image }}<img src="{{ . | absURL }}" alt="post-image" class="img-responsive">{{ end }}
-                        </div>
-
-                        <div class="content">
-                            <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-                            <p>{{ .Summary }}</p>
-                            <a class="btn btn-transparent" href="{{ .Permalink }}">Read more</a>
-                        </div>
+            {{ range .Data.Pages }}
+            {{"<!-- single blog post -->" | safeHTML}}
+            <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp" data-wow-duration="500ms">
+                <div class="post-block">
+                    <div class="media-wrapper">
+                        {{ with .Params.image }}<img src="{{ . | absURL }}" alt="post-image" class="img-fluid">{{ end }}
                     </div>
-                </article>
-                {{"<!-- /single blog post -->" | safeHTML}}
-                {{ end }}
-            </div>
 
-            <div class="all-post text-center">
+                    <div class="content">
+                        <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+                        <p>{{ .Summary }}</p>
+                        <a class="btn btn-transparent" href="{{ .Permalink }}">Read more</a>
+                    </div>
+                </div>
+            </article>
+            {{"<!-- /single blog post -->" | safeHTML}}
+            {{ end }}
+
+            <div class="all-post text-center col-lg-12">
                 <a class="btn btn-main" href="/blog">View All Post</a>
             </div>
         </div>
