--- a/layouts/partials/counter.html
+++ b/layouts/partials/counter.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             {{ range .Site.Params.counter.counterItem }}
-            <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInDown" data-wow-duration="500ms">
+            <div class="col-lg-3 col-md-6 col-12 text-center wow fadeInDown" data-wow-duration="500ms">
                 <div class="counters-item">
                     <i class="{{ .icon }}"></i>
                     <span data-speed="3000" data-to="{{ .count }}">{{ .count }}</span>
