--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -3,7 +3,7 @@
 <section class="call-to-action section-sm bg-1 overly" style='background-image: url("{{ .Site.Params.counter.bgImage | absURL }}")'>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-lg-12 text-center">
                {{ with .Site.Params.cta.title}} <h2>{{ . }}</h2> {{ end }}
                {{ with .Site.Params.cta.content }} <p>{{ . }}</p> {{ end }}
                 <a href="{{ .Site.Params.cta.btnURL }}" class="btn btn-main">{{ with .Site.Params.cta.btnText }} {{ . }} {{end}}</a>
