--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -3,17 +3,17 @@
 <section class="portfolio section" id="portfolio">
     <div class="container">
         <div class="row ">
-            <div class="col-lg-12">
+            <div class="col-xl-12">
                 {{"<!-- section title -->" | safeHTML}}
                 <div class="title text-center">
                     <h2> {{ with .Site.Data.portfolio.heading }} {{ . }} {{ end }} <span class="color">{{ with .Site.Data.portfolio.headingSpan }} {{ . }} {{ end }}</span></h2>
-                    <div class="border"></div>
+                    <div class="border-meghna"></div>
                 </div>
                 {{"<!-- /section title -->" | safeHTML}}
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="portfolio-filter">
                     <button type="button" data-filter="all">All</button>
                     {{ range .Site.Data.portfolio.filterList }}
@@ -25,9 +25,9 @@
         <div class="row portfolio-items-wrapper">
             {{"<!-- portfolio item -->" | safeHTML}}
             {{ range .Site.Data.portfolio.portfolioItem }}
-            <div class="mix col-md-4 {{ .types }}">
+            <div class="mix col-lg-4 {{ .types }}">
                 <div class="portfolio-block">
-                    <img class="img-responsive" src="{{ .image | absURL}}" alt="work-image">
+                    <img class="img-fluid" src="{{ .image | absURL}}" alt="work-image">
                     <div class="caption">
 
                         <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="{{ .image | absURL}}"
