--- a/layouts/partials/service.html
+++ b/layouts/partials/service.html
@@ -3,17 +3,18 @@
 <section id="services" class="bg-one section">
     <div class="container">
         <div class="row">
-
-            {{"<!-- section title -->" | safeHTML }}
-            <div class="title text-center wow fadeIn" data-wow-duration="500ms">
-                <h2>{{ with .Site.Data.service.heading }} {{ . }} {{ end }}<span class="color">{{ with .Site.Data.service.headingSpan }} {{ . }} {{ end }}</span></h2>
-                <div class="border"></div>
+            <div class="col-lg-12">
+                {{"<!-- section title -->" | safeHTML }}
+                <div class="title text-center wow fadeIn" data-wow-duration="500ms">
+                    <h2>{{ with .Site.Data.service.heading }} {{ . }} {{ end }}<span class="color">{{ with .Site.Data.service.headingSpan }} {{ . }} {{ end }}</span></h2>
+                    <div class="border-meghna"></div>
+                </div>
             </div>
             {{"<!-- /section title -->" | safeHTML }}
 
             {{ range .Site.Data.service.serviceItem}}
             {{"<!-- Single Service Item -->" | safeHTML }}
-            <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms">
+            <article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration="500ms">
                 <div class="service-block text-center">
                     <div class="service-icon text-center">
                         <i class="{{ .icon }}"></i>
