--- a/layouts/partials/testimonial.html
+++ b/layouts/partials/testimonial.html
@@ -3,7 +3,7 @@
 <section id="testimonial" class="testimonial overly section bg-2" style='background-image: url("{{ .Site.Data.testimonial.bgImage | absURL }}")'>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xl-12">
                 {{"<!-- testimonial wrapper -->" | safeHTML}}
                 <div id="testimonials" class="wow fadeInUp" data-wow-duration="500ms" data-wow-delay="100ms">
                     {{ range .Site.Data.testimonial.testimonialItem }}
@@ -12,7 +12,7 @@
 
                         {{"<!-- client photo -->" | safeHTML}}
                         <div class="client-thumb">
-                            <img src="{{ .image | absURL }}" class="img-responsive" alt="Meghna">
+                            <img src="{{ .image | absURL }}" class="img-fluid" alt="Meghna">
                         </div>
 
                         {{"<!-- client info -->" | safeHTML}}
@@ -31,8 +31,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 </section>
 {{"<!-- /testimonial -->" | safeHTML}}
 {{ end }}
