Use native smooth scrolling if possible, if not then use polyfill

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+<html class="no-js" lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}" scroll-behavior="smooth">
     {{- partial "head.html" . -}}
     <body id="body" data-spy="scroll" data-target=".navbar" data-offset="52">
         <div id="content">
