--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -30,6 +30,8 @@
             <div class="col-lg-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                 <form id="contact-form" class="form-meghna" method="post" action="sendmail.php" role="form">
 
+                    <input name="e-mail" type="text" id="e-mail" autocomplete="off">
+
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
                     </div>
