--- a/layouts/partials/share_post.html
+++ b/layouts/partials/share_post.html
@@ -1,6 +1,6 @@
 {{ $url := printf "%s" .Permalink | absLangURL }}
 <!-- Sharingbutton Facebook -->
-<div class="social-share">
+<div class="social-share pt-4">
         <h4>Share:</h4>
         <!-- Sharingbutton Facebook -->
         <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u={{ $url }}" target="_blank" rel="noopener" aria-label="">
