Add translation for blog

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,7 @@
                     <div class="content">
                         <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
                         <p>{{ .Summary }}</p>
-                        <a class="btn btn-transparent" href="{{ .Permalink }}">Read more</a>
+                        <a class="btn btn-transparent" href="{{ .Permalink }}">{{ i18n "readMore" }}</a>
                     </div>
                 </div>
             </article>
