--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -32,7 +32,7 @@
             {{ end }}
 
             <div class="all-post text-center col-lg-12">
-                <a class="btn btn-main" href="/blog">{{ i18n "viewAllPost" }}</a>
+                <a class="btn btn-main" href="{{ if .Site.GetPage "/blog" }}/blog{{ else }}/posts{{end}}">{{ i18n "viewAllPost" }}</a>
             </div>
         </div>
     </div>
